@@ -1,8 +1,9 @@
 spvd (0.8.5~dev-1) unstable; urgency=low
 
-  * New upstream release, closes: #3336, #3202, #3415.
+  * New upstream release, closes: #3336, #3202, #3415, #3838.
+  * Added myself to Uploaders.
 
- -- Gilles Dartiguelongue <gilles.dartiguelongue@smartjog.com>  Tue, 04 Jan 2011 11:52:05 +0100
+ -- Clément Bœsch <clement.boesch@smartjog.com>  Wed, 12 Jan 2011 17:05:13 +0100
 
 spvd (0.8.4-1) unstable; urgency=low
 
