@@ -12,6 +12,7 @@ Version 0.8.5~dev
 	* Make BaseJob derive from new style python objects.
 	* Use logging.exception for traceback logging.
 	* Fix backward compatibility of set_check_status deprecation.
+	* Discard results that failed to commit, closes: #3838.
 
 Version 0.8.4 Released on 2010/10/04
 
